2017-01-05  Arndt Kaiser

	* fixed infinite loop in synce-serial-chat,
	  if stdin has been closed and read() returns 0
	* add missing python-modules in synceconnector
	* fix gcc (4.9) compile-error when compiling with "-Werror"
	* after a connection has been closed, the unused file of the
	  unix domain socket has to be removed from the filesystem
	* log path of the unix domain socket file, if it can't be created

2016-10-22  Mark Ellis  <mark@mpellis.org.uk>

	* add dbus properties for static device properties
	* remove support for odccm
	* SynceDevice does not need to implement failable initialization
	* create _new functions for SynceConnectionBroker, DeviceLegacy,
	  DeviceRndis, DeviceManager, DeviceManagerControl
	* implement async initialisation for DeviceManager,
	  DeviceManagerControl
	* use gio functions for socket transfer of file descriptors
	  for ease of maintenance
	* improve process of establishing initial connection in
	  DeviceManager

2016-10-10  Mark Ellis  <mark@mpellis.org.uk>

	* consolidate udev device disconnect process into device manager,
	  rather than the device object, since it is possible to receive
	  a disconnect on a device that does not have a full device object
	* add a documentation page explaining the device connection process
	* drop the ability to fall back to dbus-glib if the build cannot
	  find GDBus, and simply require the GIO with dbus support

2016-10-07  Mark Ellis  <mark@mpellis.org.uk>

	* improve initialisation and error handling when passing a
  	  rapi file descriptor from dccm to client
	* tidy some variable initialisation warnings, check socket
	  permissions when passing rapi file descriptor
	* declare some inline functions in config.c to be static to
	  prevent some undefined ref errors
	* copy client file descriptor to/from socket message buffer
	  rather than direct assignment, per strict aliasing

2013-07-25  Mark Ellis  <mark@mpellis.org.uk>

	* 0.17 release

2012-08-21  Mark Ellis  <mark@mpellis.org.uk>